--- a/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
+++ b/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+          asp-href-include="bootstrap/dist/**/*.min.css"
+          asp-href-exclude="**/*-reboot*,**/*-grid*" />
     <meta name='keywords' content='topo, wspinanie, wspinaczka'>
 
     <!--   32 x 32 W tym przypadku w folderze głównym -->
