--- a/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
+++ b/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Zaloguj się</a></li>
-            <li><a href="#">Rejestracja</a></li>
+            <li><a href="#" class="account">Zaloguj się</a></li>
+            <li><a href="#" class="account">Rejestracja</a></li>
         </ul>
     </nav>
     <header>
