--- a/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
@@ -5,10 +5,10 @@
 <p class="description">Jeszcze do końca nie wiem co tutaj napisać, ale w skrócie chodzi o to, że ta strona ma zapewnić dostęp do bazy TOPO, z którą - o ile się zdąży kupić wydanie książkowe - wcale nie jest tak różowo w Polsce ;) .</p>
 <section class="choosewrapper">
     <div class="byfilters">
-        <div class="image"></div>
+        <div class="feature"></div>
         <h2>Za pomocą rozbudowanych filtrów</h2>
     </div>
-    <div class="bymap">
+    <div class="feature">
         <div class="image"></div>
         <h2>Wskaż na mapie</h2>
     </div>
