--- a/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
@@ -6,10 +6,10 @@
 <section class="choosewrapper">
     <div class="byfilters">
         <div class="feature"></div>
-        <h2>Za pomocą rozbudowanych filtrów</h2>
+        <h2><a asp-controller="ClimbingRoute" asp-action="List">Krakowsko-Częstochowska</a></h2>
     </div>
     <div class="feature">
         <div class="image"></div>
-        <h2>Wskaż na mapie</h2>
+        <h2></h2>
     </div>
 </section>
