--- a/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
-
+<header>
+    <h1>Baza TOPO dróg wspinaczkowych</h1>
+</header>
 <p class="description">Jeszcze do końca nie wiem co tutaj napisać, ale w skrócie chodzi o to, że ta strona ma zapewnić dostęp do bazy TOPO, z którą - o ile się zdąży kupić wydanie książkowe - wcale nie jest tak różowo w Polsce ;) .</p>
 <section class="choosewrapper">
     <div class="byfilters">
         <div class="feature"></div>
-        <h2><a asp-controller="ClimbingRoute" asp-action="List">Krakowsko-Częstochowska</a></h2>
+        <h2><a asp-controller="ClimbingRoute" asp-action="List">Jura Krakowsko-Częstochowska</a></h2>
     </div>
     <div class="feature">
         <div class="image"></div>
