--- a/TopoApp/TopoApp/Views/ClimbingRoute/List.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/List.cshtml
@@ -1,10 +1,12 @@
 ﻿@model IEnumerable<AreaModel>
 
+<div id='map' style='width: 400px; height: 300px;'></div>
+
 @foreach(var p in Model)
 {
     <div>
         <h1>@p.AreaName</h1>
-        @*<p>@p.AreaLoc.ToString()</p>*@
+        <p>@p.AreaLoc.ToString()</p>
         @*@foreach(var reg in p.Regions)
         {
             <h2>@reg.RegionName</h2>
@@ -26,7 +28,17 @@
                         </ul>
                     }
                 }
-            }*@
-        @*}*@
+            }
+        }*@
     </div>
 }
+
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiY2x5dHJhIiwiYSI6ImNraGwybzZ4NDAxbXoycmsxMzQxcGtmZDMifQ.9LFmD24Gf1VPQ7N7gZLiXQ';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/clytra/ckhl39lus01ac19prnnuj4hh3',
+        center: [-74.5, 40], // starting position [lng, lat]
+        zoom: 9 // starting zoom
+    });
+</script>
