--- a/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
+++ b/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
@@ -18,17 +18,34 @@
     <link rel="icon" href="favicon.png">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#" class="account">Zaloguj się</a></li>
-            <li><a href="#" class="account">Rejestracja</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebApplication1</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="ClimbingRoute" asp-action="">Zaloguj się</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="ClimbingRoute" asp-action="">Rejestracja</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <main>
-        @RenderBody();
-    </main>
-    <footer>
-        <p>&copy; Baza TOPO</p>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - Baza TOPO - <a asp-area="" asp-controller="" asp-action="">Polityka prywatności</a>
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
