--- a/TopoApp/TopoApp/Views/ClimbingRoute/List.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/List.cshtml
@@ -38,7 +38,7 @@
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/clytra/ckhl39lus01ac19prnnuj4hh3',
-        center: [-74.5, 40], // starting position [lng, lat]
-        zoom: 9 // starting zoom
+        center: [19.612, 50.320],
+        zoom: 7 
     });
 </script>
