--- a/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
+++ b/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
@@ -1,15 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>Baza TOPO</title>
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
+
     <meta name="description" content="Baza TOPO dróg wspinaczkowych">
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans'>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya+Sans:regular,italic,bold,bolditalic" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nixie+One:regular,italic,bold,bolditalic" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya+SC:regular,italic,bold,bolditalic" />
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/css/style.css" media="screen" />
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
@@ -17,39 +26,93 @@
     <meta name='keywords' content='topo, wspinanie, wspinaczka'>
     <link rel="icon" href="favicon.png">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebApplication1</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="ClimbingRoute" asp-action="">Zaloguj się</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="ClimbingRoute" asp-action="">Rejestracja</a>
-                    </li>
-                </ul>
+    <div id="drawer-right">
+        <div class="cross text-right">
+            <a class="toggleDrawer" href="#"><i class="fa fa-times-circle fa-2x"></i></a>
+        </div>
+        <h2>Menu</h2>
+        <nav>
+            <ul class="nav nav-pills nav-stacked">
+                <li>
+                    <a asp-controller="ClimbingRoute" asp-action=""> Zaloguj się</a>
+                </li>
+                <li>
+                    <a asp-controller="ClimbingRoute" asp-action=""> Rejestracja</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="social">
+            <h2>Bądź na bieżąco</h2>
+            <ul>
+                <li><a href=""><i class="fa fa-facebook-square fa-3x"></i></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="wrapper">
+
+        <div id="header" class="content-block header-wrapper">
+            <div class="header-wrapper-inner">
+                <section class="top clearfix">
+                    <div class="pull-left">
+                        <h1><a class="logo" href="index.html">Baza TOPO</a></h1>
+                    </div>
+                    <div class="pull-right">
+                        <a class="toggleDrawer" href="#"><i class="fa fa-bars fa-2x"></i></a>
+                    </div>
+                </section>
+                <section class="bottom">
+                    <a id="scrollToContent" href="#">
+                        <img src="~/img/arrow_down.png">
+                    </a>
+                </section>
             </div>
         </div>
-    </nav>
-    <div class="container">
-        <main role="main" class="pb-3">
+        <div>
             @RenderBody()
-        </main>
-    </div>
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Baza TOPO - <a asp-area="" asp-controller="" asp-action="">Polityka prywatności</a>
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+        <div class="content-block" id="contact">
+            <div class="container text-center">
+                <header class="block-heading cleafix">
+                    <h1>Contact Us</h1>
+                    <p>Feel free to drop us a line.</p>
+                </header>
+                <section class="block-body">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <form class="" role="form">
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-white" id="subject" placeholder="Your Name" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-white" id="exampleInputEmail2" placeholder="Enter email" required>
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control form-control-white" placeholder="Write Something" required></textarea>
+                                </div>
+                                <input type="submit" class="btn btn-o-white" value="Say Hello">
+                            </form>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="content-block" id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6">&copy; 2020 - Baza TOPO - <a asp-area="" asp-controller="" asp-action="">Polityka prywatności</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="~/js/jquery-2.1.3.min.js"></script>
+    <script src="~/js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/jquery.actual.min.js"></script>
+    <script src="~/js/jquery.scrollTo.min.js"></script>
+    <script src="~/js/js/script.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
