--- a/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
+++ b/TopoApp/TopoApp/Views/ClimbingRoute/Index.cshtml
@@ -30,34 +30,34 @@
         <section class="block-body">
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/rain_1-320x240.jpg)">
+                    <a asp-controller="ClimbingRoute" asp-action="List" class="recent-work" style="background-image: url(img/jura_1366x768.jpg)">
+                        <span class="btn btn-o-white">Jura Krakowsko-Częstochowska</span>
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="#" class="recent-work" style="background-image:url(img/min_icons_thumb1-320x240.jpg)">
                         <span class="btn btn-o-white">Lorem Rocks</span>
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/min_icons_thumb1-320x240.jpg)">
-                        <span class="btn btn-o-white">Lorem Rocks</span>
-                    </a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/flat_icons_thumb.jpg)">
+                    <a href="#" class="recent-work" style="background-image:url(img/flat_icons_thumb.jpg)">
                         <span class="btn btn-o-white">Lorem Rocks</span>
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/wood-320x240.jpg)">
+                    <a href="#" class="recent-work" style="background-image:url(img/wood-320x240.jpg)">
                         <span class="btn btn-o-white">Lorem Rocks</span>
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/bike-320x240.jpg)">
+                    <a href="#" class="recent-work" style="background-image:url(img/bike-320x240.jpg)">
                         <span class="btn btn-o-white">Lorem Rocks</span>
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="#" class="recent-work" style="background-image: url(img/six_1-320x240.jpg)">
+                    <a href="#" class="recent-work" style="background-image:url(img/six_1-320x240.jpg)">
                         <span class="btn btn-o-white">Lorem Rocks</span>
                     </a>
                 </div>
@@ -65,14 +65,3 @@
         </section>
     </div>
 </div>
-  
-    @*<section class="choosewrapper">
-        <div class="byfilters">
-            <div class="feature"></div>
-            <h2><a asp-controller="ClimbingRoute" asp-action="List">Jura Krakowsko-Częstochowska</a></h2>
-        </div>
-        <div class="feature">
-            <div class="image"></div>
-            <h2></h2>
-        </div>
-    </section>*@
