--- a/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
+++ b/TopoApp/TopoApp/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nixie+One:regular,italic,bold,bolditalic" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya+SC:regular,italic,bold,bolditalic" />
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/style.css" media="screen" />
 
@@ -32,7 +32,7 @@
         <div class="cross text-right">
             <a class="toggleDrawer" href="#"><i class="fa fa-times-circle fa-2x"></i></a>
         </div>
-        <h2>Menu</h2>
+        <h2>Navigate</h2>
         <nav>
             <ul class="nav nav-pills nav-stacked">
                 <li>
@@ -41,12 +41,36 @@
                 <li>
                     <a asp-controller="ClimbingRoute" asp-action=""> Rejestracja</a>
                 </li>
+                <li>
+                    <a href="#wrapper"><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li>
+                    <a href="#portfolio"><i class="fa fa-bookmark"></i> Portfolio</a>
+                </li>
+                <li>
+                    <a href="#services"><i class="fa fa-tasks"></i> Services</a>
+                </li>
+                <li>
+                    <a href="#blog"><i class="fa fa-wordpress"></i> Blog</a>
+                </li>
+                <li>
+                    <a href="#parallax"><i class="fa fa-heart"></i> Parallax</a>
+                </li>
+                <li>
+                    <a href="#testimonials"><i class="fa fa-thumbs-up"></i> Testimonials</a>
+                </li>
+                <li>
+                    <a href="#contact"><i class="fa fa-phone-square"></i> Contact</a>
+                </li>
             </ul>
         </nav>
         <div class="social">
-            <h2>Bądź na bieżąco</h2>
+            <h2>Stay Connected</h2>
             <ul>
                 <li><a href=""><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                <li><a href=""><i class="fa fa-twitter-square fa-3x"></i></a></li>
+                <li><a href=""><i class="fa fa-tumblr-square fa-3x"></i></a></li>
+                <li><a href=""><i class="fa fa-google-plus-square fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
@@ -63,42 +87,52 @@
                         <a class="toggleDrawer" href="#"><i class="fa fa-bars fa-2x"></i></a>
                     </div>
                 </section>
+                <section class="center">
+                    <div class="slogan">
+                        &copy; Baza TOPO
+                    </div>
+                    <div class="secondary-slogan">
+                        The Flusk Theme By ThemeWagon.
+                    </div>
+                </section>
                 <section class="bottom">
                     <a id="scrollToContent" href="#">
-                        <img src="~/img/arrow_down.png">
+                        <img src="assets/images/arrow_down.png">
                     </a>
                 </section>
             </div>
         </div>
+
         <div>
             @RenderBody()
         </div>
+
         <div class="content-block" id="contact">
             <div class="container text-center">
                 <header class="block-heading cleafix">
-                    <h1>Contact Us</h1>
-                    <p>Feel free to drop us a line.</p>
+                    <p>Masz jakieś uwagi dot. aplikacji? Napisz do mnie!</p>
                 </header>
                 <section class="block-body">
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                             <form class="" role="form">
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-white" id="subject" placeholder="Your Name" required>
+                                    <input type="email" class="form-control form-control-white" id="subject" placeholder="Jak się nazywasz?" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-white" id="exampleInputEmail2" placeholder="Enter email" required>
+                                    <input type="email" class="form-control form-control-white" id="exampleInputEmail2" placeholder="Wpisz swój email" required>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control form-control-white" placeholder="Write Something" required></textarea>
+                                    <textarea class="form-control form-control-white" placeholder="Masz jakieś uwagi dot. aplikacji? Napisz do mnie!" required></textarea>
                                 </div>
-                                <input type="submit" class="btn btn-o-white" value="Say Hello">
+                                <input type="submit" class="btn btn-o-white" value="Wyślij">
                             </form>
                         </div>
                     </div>
                 </section>
             </div>
         </div>
+
         <div class="content-block" id="footer">
             <div class="container">
                 <div class="row">
@@ -107,12 +141,12 @@
             </div>
         </div>
     </div>
+
     <script src="~/js/jquery-2.1.3.min.js"></script>
     <script src="~/js/jquery-migrate-1.2.1.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/jquery.actual.min.js"></script>
     <script src="~/js/jquery.scrollTo.min.js"></script>
     <script src="~/js/js/script.js"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
